<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.characterDetails.CharacterDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="@color/lime_green"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:theme="@style/Theme.RickAndMortyApp"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/ivCharacterDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="Detail"
                android:theme="@style/Theme.RickAndMortyApp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:columnCount="2"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/species"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/status"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/origin"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/episodes"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tvEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="end"/>

            </GridLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="73dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/teal_700"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>