<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.charactersList.CharacterListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lime_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_main" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrevPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/prevPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green"
        android:text="@string/nextPage"
        app:layout_constraintBottom_toTopOf="@id/guidelineButtonsToRecycler"
        app:layout_constraintEnd_toEndOf="@id/btnPrevPage"
        app:layout_constraintStart_toStartOf="@id/btnPrevPage"
        app:layout_constraintTop_toBottomOf="@id/btnPrevPage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonsToRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCharacters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineButtonsToRecycler"
        tools:listitem="@layout/loading_characters" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/characterSuccessViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="btnNextPage, btnPrevPage, recyclerCharacters" />


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerCharactersLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        app:shimmer_auto_start="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/loading_characters" />

            <include layout="@layout/loading_characters" />

            <include layout="@layout/loading_characters" />

            <include layout="@layout/loading_characters" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>